p2/shared/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ngd

spec:
  replicas: 1
  template:
    metadata:
    spec:
      containers:
      - name: nginx
        image: nginx:latest 
        ports:
        - containerPort: 80
        volumeMounts:
          - name: config-volume
            mountPath: /usr/share/nginx/html/index.html
      volumes:
        - name: config-volume
          hostPath:
            path: /vagrant_shared/app1.html
            type: File
