p2/shared/base/nginx-deployment-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment

spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:latest 
        ports:
        - containerPort: 80
        volumeMounts:
          - name: config-volume
            mountPath: /configs/
      volumes:
        - name: config-volume
          configMap:
            name: html-config
