p2/shared/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ngs
spec:
  type: ClusterIP
  ports:
    - port: 80
