p2/shared/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-host-routing
spec:
  rules:
  - host: "app1.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          serviceName: ngs-app1
          servicePort: 80
  #ingressClassName: nginx
  #changing ingress controller to nginx
